fix: overflowing buttons when changing size dynamically

--- a/src/components/Board/BoardLayout.css
+++ b/src/components/Board/BoardLayout.css
@@ -29,6 +29,7 @@
   color: #fff;
 }
 
-.Board__grid {
+.Board__buttons {
   flex: 1;
+  overflow: auto;
 }
